2003-01-18  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/String/getBytes.java: Add new UTF8 test.

2003-01-03  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/ObjectStreamClass/ProxyTest.java: New test.

2003-01-02  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/FilterInputStream/SimpleRead.java: Don't use
	inner classes to help gcj.
	* gnu/testlet/java/io/FilterReader/SimpleRead.java: Likewise.
	* gnu/testlet/java/io/OutputStream/Test.java: Likewise.

2003-01-02  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/FilterInputStream/MarkReset.java: Don't use
	inner classes to help gcj.
	* gnu/testlet/java/io/FilterWriter/write.java: Likewise.
	* gnu/testlet/java/io/InputStream/Test.java: Likewise.
	* gnu/testlet/java/io/PrintWriter/jdk11.java: Likewise.
	* gnu/testlet/java/io/Reader/Test.java: Likewise.
	* gnu/testlet/java/io/Writer/Test.java: Likewise.

2003-01-02  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/BufferedInputStream/SimpleRead.java (test):
	Removed wrong check(false).

2002-12-27  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/StringWriter/Test.java (test): Catch Throwable
	when testing close to make it compile against libraries that don't
	declare IOException for close.

2002-12-27  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/StringWriter/Test.java:
	Modified close() test to catch IOException explicitly

2002-12-27  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FileOutputStream/jdk12.java:
	Added test for correct Exception thrown from constructor

2002-12-26  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FilterWriter/write.java:
	Added tests for FilterWriter class

2002-12-26  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedStream/close.java:
	Modified test of input stream close() method to match reference
	behavior.

2002-12-26  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/FilterReader/SimpleRead.java: